Overflow on the X axis solved by settingf it to hidden on the main tag

--- a/styles/index.css
+++ b/styles/index.css
@@ -8,7 +8,7 @@ html { scroll-behavior: smooth; }
 
 body { font-family: var(--text-ff); font-weight: 300; color: var(--text); background-color: var(--background); line-height: 1.4; overflow-x: hidden; }
 
-main { max-width: 1020px; margin: 0 auto; padding: 7rem 0 0; }
+main { max-width: 1020px; margin: 0 auto; padding: 7rem 0 0; overflow-x: hidden; }
 
 @media screen and (max-width: 1120px) { main { margin: 0 60px; } }
 
@@ -32,13 +32,11 @@ h4, h5, h6 { font-size: 1.5rem; }
 
 p, span { font-size: 1.15rem; line-height: 1.8; }
 
-img { width: 100px; }
-
 .cta-link { text-decoration: none; font-size: 0.875em; font-weight: bolder; color: inherit; padding: 0.75em 1em; background-color: rgba(255, 255, 255, 0.25); -webkit-transition: background-color 0.25s ease; transition: background-color 0.25s ease; outline: none; }
 
 .cta-link:hover, .cta-link:focus { color: inherit; background-color: #d20023; }
 
-.navbar { position: fixed; width: 100%; max-width: 100vw; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap; color: white; -webkit-transition: all 0.4s ease; transition: all 0.4s ease; z-index: 9999; }
+.navbar { position: fixed; width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap; color: white; -webkit-transition: all 0.4s ease; transition: all 0.4s ease; z-index: 9999; }
 
 @media screen and (min-width: 1000px) { .navbar { -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-flow: row nowrap; flex-flow: row nowrap; } }
 
@@ -48,7 +46,7 @@ img { width: 100px; }
 
 .navbar a:hover::after, .navbar a:focus::after { -webkit-transform: scaleX(0.75); transform: scaleX(0.75); outline: 0; }
 
-.navbar .bar { max-width: 100vw; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; padding: 3rem 3rem; background-color: transparent; -webkit-box-shadow: none; box-shadow: none; -webkit-transition: all 0.4s ease; transition: all 0.4s ease; }
+.navbar .bar { max-width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; padding: 3rem 3rem; background-color: transparent; -webkit-box-shadow: none; box-shadow: none; -webkit-transition: all 0.4s ease; transition: all 0.4s ease; }
 
 @media screen and (min-width: 400px) { .navbar .bar { padding: 3rem 4rem; } }
 
@@ -64,7 +62,7 @@ img { width: 100px; }
 
 @media screen and (min-width: 1000px) { .navbar .bar .menu-toggle { display: none; } }
 
-.navbar ul { max-width: 100vw; height: 100%; list-style-type: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: space-evenly; -ms-flex-pack: space-evenly; justify-content: space-evenly; -webkit-transition: all 0.4s ease; transition: all 0.4s ease; max-height: 0; opacity: 0; }
+.navbar ul { max-width: 100%; height: 100%; list-style-type: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: space-evenly; -ms-flex-pack: space-evenly; justify-content: space-evenly; -webkit-transition: all 0.4s ease; transition: all 0.4s ease; max-height: 0; opacity: 0; }
 
 @media screen and (min-width: 1000px) { .navbar ul { height: auto; max-height: -webkit-max-content; max-height: -moz-max-content; max-height: max-content; opacity: 1; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -ms-flex-flow: row nowrap; flex-flow: row nowrap; margin-left: auto; padding-right: 4rem; } }
 
@@ -134,7 +132,7 @@ img { width: 100px; }
 
 #services { position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap; }
 
-#services::before { content: ''; position: absolute; top: 0; bottom: 0; left: -100vw; right: -100vw; background-color: var(--secondary-background); z-index: -1; }
+#services::before { content: ''; position: absolute; top: 0; bottom: 0; left: -100vw; width: 200vw; background-color: var(--secondary-background); z-index: -1; }
 
 #services .cta-link { padding: 0.75rem 1.25rem; -ms-flex-item-align: start; -ms-grid-row-align: start; align-self: start; font-size: 1rem; border: 1px solid #aaa; color: var(--text); }
 
@@ -211,11 +209,11 @@ img { width: 100px; }
 
 #contact .contact-details #google-map { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; background-image: url(/assets/map.png); height: 400px; }
 
-#contact::before { content: ''; position: absolute; top: 0; bottom: 0; left: -100vw; right: -100vw; background-color: var(--secondary-background); z-index: -1; }
+#contact::before { content: ''; position: absolute; top: 0; bottom: 0; left: -100vw; width: 200vw; background-color: var(--secondary-background); z-index: -1; }
 
 footer { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-flow: column nowrap; flex-flow: column nowrap; -webkit-box-align: center; -ms-flex-align: center; align-items: center; padding: 7rem 0; position: relative; }
 
-footer::before { content: ''; position: absolute; top: 0; bottom: 0; left: -100vw; right: -100vw; background-color: var(--secondary-background); z-index: -1; }
+footer::before { content: ''; position: absolute; top: 0; bottom: 0; left: -100vw; width: 200vw; background-color: var(--secondary-background); z-index: -1; }
 
 footer span { opacity: 0.6; text-transform: uppercase; font-size: 0.9em; margin-bottom: 0.5rem; }
 
