--- a/styles/modules/_base.scss
+++ b/styles/modules/_base.scss
@@ -15,6 +15,7 @@ main {
   max-width: 1020px;
   margin: 0 auto;
   padding: 7rem 0 0;
+  overflow-x: hidden;
 
   @media screen and (max-width: 1120px) {
     margin: 0 60px;
@@ -76,9 +77,4 @@ p,
 span {
   font-size: 1.15rem;
   line-height: 1.8;
-}
-
-// temporary
-img {
-  width: 100px;
 }
