--- a/styles/modules/sections/_contact.scss
+++ b/styles/modules/sections/_contact.scss
@@ -138,7 +138,7 @@
     top: 0;
     bottom: 0;
     left: -100vw;
-    right: -100vw;
+    width: 200vw;
     background-color: var(--secondary-background);
     z-index: -1;
   }
