--- a/styles/modules/sections/_footer.scss
+++ b/styles/modules/sections/_footer.scss
@@ -11,7 +11,7 @@ footer {
     top: 0;
     bottom: 0;
     left: -100vw;
-    right: -100vw;
+    width: 200vw;
     background-color: var(--secondary-background);
     z-index: -1;
   }
