--- a/styles/modules/sections/_navbar.scss
+++ b/styles/modules/sections/_navbar.scss
@@ -1,7 +1,6 @@
 .navbar {
   position: fixed;
   width: 100%;
-  max-width: 100vw;
   display: flex;
   flex-flow: column nowrap;
   color: white;
@@ -41,7 +40,7 @@
 }
 
 .navbar .bar {
-  max-width: 100vw;
+  max-width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -87,7 +86,7 @@
 }
 
 .navbar ul {
-  max-width: 100vw;
+  max-width: 100%;
   height: 100%;
   list-style-type: none;
   display: flex;
